--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
                         <!-- Logo -->
-                        <p class="rights">&copy; DESARROLLADA POR THINKBLUE.CL</p>
+                        <p class="rights">&copy; DESARROLLADA POR BASTIAN</p>
                     </div>
                 </div>
             </div>
